# fivec-scheduler-server

./: Cargo.toml  Frank.json  README.md  areas_data.json  code_data.json  course_cache.json  course_cache.ron  descriptions.json  jay_place_menus.json  locations.json  locations.old.json  menu.py  menu_cache.json  pom_courses.json  test.html
src/: compute_timings.rs  course_api.rs  database.rs  locations.rs  main.rs  menu.rs  routes.rs  scrape_descriptions.rs
