[package]
name = "fivec-scheduler-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["cookies"] }
actix-web = { version = "4.0.0-beta.8", features = ["openssl"] }
actix-cors = "0.6.0-beta.2"
chrono = { version = "*", features = ["serde"] }
serde = "*"
ron = "*"
serde_json = "*"
futures = "*"
env_logger = "*"
log = "*"
tokio = { version = "*", features = ["full"] }
lazy_static = "*"
openssl = { version = "0.10", features = ["vendored"] }
ctrlc = "*"
rand = { version = "*", features = ["small_rng"] }
bimap = { version = "0.6.1", features = ["serde"] }
